random colorizer bug fixed; layout shift; just need to refactor everything next

--- a/carduo.css
+++ b/carduo.css
@@ -3,6 +3,7 @@ body {
 	background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	color: white;
+	font-family: 'Ranchers', cursive;
 }
 
 .card {
@@ -39,5 +40,25 @@ body {
 
 h1 {
 	text-align: center;
-	margin: 20px;
+	font-size: 100px;
+	letter-spacing: 4px;
+}
+
+h2 {
+	font-size: 75px;
+}
+
+#right div:nth-of-type(2) {
+	font-size: 75px;
+	margin-bottom: 25px;
+}
+
+.btn {
+	font-size: 50px;
+	border-radius: 10px;
+	visibility: visible;
+}
+
+.btn:focus {
+	outline: 0;
 }
